        and removed too much.

      - Removed some more traces of FileSystemSite-based layout system.

      - Some fixes in the refactored lookup window code.

      - Some cleanups of GhostFolder code, fixing an error that
        appeared when Five views interacted with them.

      - Fix in Ghost code stops another error related to Five view
        interaction with acquisition.

  1.5b1

    Features added

      - Changed over Silva so it works with Zope 2.8/Five/Zope 3
        interfaces instead of old-style interfaces. See
        doc/developer_changes for more details. These interfaces were
        in SilvaLayout as marker interfaces in the past.
      
      - Adjusted test infrastructure so it works with Five.

      - Use Zope 2.8 style transactions.

      - Changed over Silva so it works with the Five/Zope 3 translation
        architecture, using Five. See doc/developer_changes for more
        details.

      - Some parts of the Silva UI (for instance the lookup window in the
        edit views) are now based on Zope 3 adapters and views, using Five.
        This is a first step of a long evolutionary transition for the Silva
        UI.

      - Converted IViewerSecurity, IIndexable, IHaunted, IAssetData to
        Zope 3 adapters.

      - The silva-extra metadata set now has a language field that stores
        a ISO 639 two letter language code.

      - Language setting in the user preferences is now shown as human
        readable text, not as a language code. Moreover, using Zope 3's
        locale database, names for languages are shown in the configured
        language.

      - Added support for Kupu 1.3.4.

    Bugs fixed

      - Added missing 'is_default' method on SilvaObject, it was already
        available on Content but some new functionality (closing objects
        from tab_edit of Container types) made that it was required for
        other types as well.
